objects/Payment_Country_Setting__mdt.object
<CustomObject>
    <fields>
        <fullName>APIKey__c</fullName>
        <label>APIKey</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cancel_Url__c</fullName>
        <label>Cancel Url</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Failed_Url__c</fullName>
        <label>Failed Url</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SmarterPay_User_Name__c</fullName>
        <label>SmarterPay User Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Success_Url__c</fullName>
        <label>Success Url</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Payment Country Setting</label>
    <pluralLabel>Payment Country Settings</pluralLabel>
</CustomObject>